Add via QML callable get method to DirModel.

The get method returns a QVariantMap.
Currently this maps contains the keys "url" and "mimeType", but it can
be easily extended.
This obsoletes the previous hack.
BUG: 307691