applications/filebrowser/imageviewerpart/contents/ui/ViewerPage.qml
@@ -215,14 +215,7 @@ PlasmaComponents.Page {
         id: quickBrowserBar
         model: fileBrowserRoot.model
         onCurrentIndexChanged: {
-            if (fileBrowserRoot.model.get) {
-                var path = fileBrowserRoot.model.get(currentIndex).url
-            } else {
-                console.log("No get method in model found. Assuming we are dealing with a DirModel...")
-                console.log(fileBrowserRoot.model)
-                var path = fileBrowserRoot.model.pathForIndex(currentIndex)
-                console.log("Path: " + path)
-            }
+            var path = fileBrowserRoot.model.get(currentIndex).url
             imageArea.delegate.source = path
             viewerPage.path = path
             resourceInstance.uri = path
